codigo/listas/error_comas.out
  File "<stdin>", line 1
    letras = ['a', 'b', 'c',,]
                            ^
SyntaxError: invalid syntax